--- a/Android/TouchingLives/app/src/main/res/layout/activity_login.xml
+++ b/Android/TouchingLives/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary">
+    android:background="@color/blue_white">
 
     <include layout="@layout/custom_action_bar"/>
 
@@ -24,7 +24,7 @@
             android:layout_centerInParent="true"
             android:id="@+id/loginContainer"
             android:layout_gravity="center"
-            android:background="@color/colorPrimary">
+            android:background="@color/blue_light">
         </FrameLayout>
 
     </android.support.v4.widget.NestedScrollView>
