--- a/Android/TouchingLives/app/src/main/res/values/styles.xml
+++ b/Android/TouchingLives/app/src/main/res/values/styles.xml
@@ -21,5 +21,9 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="spinnerStyle"  parent="@android:style/Widget.TextView.SpinnerItem">
+        <item name="android:padding">5sp</item>
+    </style>
+
 
 </resources>
