--- a/Android/TouchingLives/app/src/main/res/layout/activity_mentor_actions.xml
+++ b/Android/TouchingLives/app/src/main/res/layout/activity_mentor_actions.xml
@@ -10,7 +10,7 @@
     <include layout="@layout/custom_action_bar"/>
 
     <com.ganja.kalpe.touchinglives.Utils.MyTextView
-        android:id="@+id/taskTitle"
+        android:id="@+id/mentorTaskTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/loading"
@@ -20,13 +20,13 @@
         style="@android:style/TextAppearance.DeviceDefault.Large"/>
 
     <ListView
-        android:id="@+id/taskList"
+        android:id="@+id/mentorTaskList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"/>
 
     <android.support.v4.widget.ContentLoadingProgressBar
-        android:id="@+id/progbar"
+        android:id="@+id/mentorProgbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center" />
