--- a/Android/TouchingLives/app/src/main/res/layout/logincard.xml
+++ b/Android/TouchingLives/app/src/main/res/layout/logincard.xml
@@ -15,7 +15,7 @@
         android:padding="20dp"
         android:orientation="vertical"
         android:gravity="center"
-        android:background="@color/colorPrimaryDark">
+        android:background="@color/blue">
 
         <LinearLayout
             android:id="@+id/login_layout"
@@ -89,7 +89,7 @@
                 android:background="@drawable/loginbutton_selector"
                 android:padding="3dp"
                 android:text="@string/login"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/blue"
                 android:textSize="17sp"
                 android:textStyle="bold" />
         </LinearLayout>
