--- a/Android/TouchingLives/app/src/main/res/layout/signupcard.xml
+++ b/Android/TouchingLives/app/src/main/res/layout/signupcard.xml
@@ -8,7 +8,7 @@
     android:layout_height="wrap_content"
     card_view:cardElevation="10dp"
     android:padding="10dp"
-    app:cardBackgroundColor="@color/colorPrimaryDark">
+    app:cardBackgroundColor="@color/blue_white">
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -103,7 +103,7 @@
             android:background="@drawable/loginbutton_selector"
             android:padding="3dp"
             android:text="@string/signUp"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/blue"
             android:textSize="17sp"
             android:textStyle="bold" />
     </LinearLayout>
